--- a/Homework/js- homework4/js- homework4-ex1-option2/index.html
+++ b/Homework/js- homework4/js- homework4-ex1-option2/index.html
@@ -15,11 +15,7 @@
             <br/>
             <img src="https://picsum.photos/50/50">
             <br/>
-            <script>
-                    const a = document.getElementsByTagName("a").length;
-                    const b = document.getElementsByTagName("img").length;
-                    alert("In this website there are "+a+" links and "+b+" images");
-            </script>
+            <script src="site.js"></script>
         </div>
     </body>
 </html>
