--- a/Homework/js- homework5- Tal's burger/index.html
+++ b/Homework/js- homework5- Tal's burger/index.html
@@ -17,7 +17,7 @@
             <h2>Make your own burger</h2>
             <br>
             <div>The basic burger price is 40 ils</div>
-            <div>please fill free to add any of the below additions to your burger</div>
+            <div>please feel free to add any of the below additions to your burger</div>
             <br>
 
             <div class="options">
